--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body{
     font-family: 'Montserrat', sans-serif;
     margin: 0;
 }
-.top-header, .about-me{
+.top-header, .about-me, .my-recipies-blog, .counter{
  display: flex;
 }
 .header-left, .header-right{
@@ -22,13 +22,13 @@ body{
 .header-left p{
     margin-bottom: 100px;
 }
-.header-left a{
+.header-left a, .about-right a{
     text-decoration: none;
-    padding: 16px 32px;
+    padding: 20px 32px;
     background-image: linear-gradient(#FBA24F, #FF1E1E);
     color: #fff;
     font-weight: 700;
-    border-radius: 10px;
+    border-radius: 30px;
 }
 .header-right img{
     width: 100%;
@@ -53,4 +53,69 @@ body{
 }
 .about-right, .about-left{
     width: 50%;
+}
+.about-right h1{
+    font-weight: 700;
+    font-size: 40px;
+    color: #707070;
+    margin-top: 200px;
+}
+.about-right p{
+    padding-right: 400px;
+    margin-bottom: 100px;
+    font-size: 18px;
+}
+.my-recipies{
+    text-align: center;    
+}
+.my-recipies h1{
+    font-weight: 700;
+    font-size: 36px;  
+}
+.my-recipies p{
+    padding: 0 200px;
+    margin-bottom: 100px;
+}
+.blog{
+    text-align: center;
+    margin: auto;
+    width: 377px;
+    height: 528px;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px rgb(255, 255, 255),
+    0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
+}
+.blog img{
+    width: 337px;
+    margin-top: 100px;
+}
+.blog p{
+    width: 70%;
+    padding-left: 60px;
+}
+.counter{
+    width: 1249px;
+    margin: auto;
+    padding: 0 100px;
+    margin-top: 100px;
+    margin-bottom: 100px;
+    border-radius: 10px;
+    box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px rgb(255, 255, 255),
+    0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
+}
+.counter-section{
+    width: 30%;
+}
+footer{
+    background-color: #0B0D17;
+    text-align: center;
+    height: 256px;
+}
+footer h1{
+    padding-top: 100px;
+    color: #707070;
+}
+footer p{
+    color: #fff;
 }
